# ecs_pipeline_example

./: .gitignore  Dockerfile  pyproject.toml  run.py
.github/workflows/: build.yml  destroy.yml
ecs_pipelines/sources/: dummy.py
ecs_pipelines/stream/: dummy_stream.py
terraform/: iam.tf  main.tf  networking.tf  pipelines.tf  terraform.tfstate  variables.tf  vpc.tf
terraform/streams/: main.tf
